Fix problem with overflow element section Pricing -Cherry Pick from the commit 1b3f82b
Because the change the flex to grid was causing the overflow, due to the proportion of the column.
So I restored the old display for avoid this problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1013,10 +1013,8 @@ button {
   }
 
   .pricing__container {
-    width: max-content;
-    display: grid;
-    grid-template-columns: repeat(3, 400px);
-    gap: 50px;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
   }
 
   .section__contact {
